--- a/templates/munin-plugin.conf
+++ b/templates/munin-plugin.conf
@@ -1,6 +1,6 @@
 [jenkins_*]
-env.url https://{{ jenkins_fqdn }}
-env.port 443
+env.url http://{{ jenkins_http_listen_address }}
+env.port 8080
 env.context /
 env.user {{ jenkins_munin_user }}
 env.apiToken {{ jenkins_munin_apitoken }}
