try force dependencies
--

--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -14,6 +14,7 @@
       url_username: "{{ jenkins_admin_username }}"
     url_password: "{{ jenkins_admin_password }}"
     url: http://{{ jenkins_http_listen_address }}:8080
+    with_dependencies: yes
   with_items: "{{ jenkins_plugins }}"
   become: yes
   notify: restart_jenkins
