--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,7 +3,10 @@
 - hosts: all
 
   vars:
+
     jenkins_http_listen_address: 0.0.0.0
+
+    jenkins_slave_agent_port: 5000
 
     jenkins_plugins:
       - git
