enable configure.yml
--

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -13,4 +13,4 @@
       - mercurial
 
   roles:
-    - { role: "{{ role_root | default('../ansible-role-wildfly') }}" }
+    - { role: "{{ role_root | default('../ansible-role-jenkins') }}" }
