--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,8 @@
 - import_tasks: plugins.yml
   when: jenkins_plugins | length > 0
 
+- import_tasks: configure.yml
+
 - name: check if munin-node is installed
   command: dpkg -L munin-node
   register: jenkins_munin_node_check
