--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,11 +3,14 @@
 - hosts: all
 
   vars:
+
     jenkins_http_listen_address: 0.0.0.0
+
+    jenkins_slave_agent_port: 5000
 
     jenkins_plugins:
       - git
       - mercurial
 
   roles:
-    - { role: "{{ role_root | default('../ansible-role-wildfly') }}" }
+    - { role: "{{ role_root | default('../ansible-role-jenkins') }}" }
