--- a/templates/munin-plugin.conf
+++ b/templates/munin-plugin.conf
@@ -1,5 +1,5 @@
 [jenkins_*]
-env.url http://{{ jenkins_http_listen_address }}
+env.url {{ jenkins_url }}
 env.port 8080
 env.context /
 env.user {{ jenkins_munin_user }}
