--- a/tasks/admin.yml
+++ b/tasks/admin.yml
@@ -25,7 +25,7 @@
   become: yes
 
 - name: wait_for jenkins
-  shell: "curl -D - --silent --max-time 5 http://{{ jenkins_http_listen_address }}:8080/cli/"
+  shell: "curl -D - --silent --max-time 5 {{ jenkins_url }}/cli/"
   register: result
   until: (result.stdout.find("403 Forbidden") != -1) or (result.stdout.find("200 OK") != -1) and (result.stdout.find("Please wait while") == -1)
   retries: 60
