--- a/tests/test.yml
+++ b/tests/test.yml
@@ -6,6 +6,8 @@
 
     jenkins_http_listen_address: 0.0.0.0
 
+    jenkins_url: http://127.0.0.1:8080
+
     jenkins_slave_agent_port: 5000
 
     jenkins_plugins:
