--- a/templates/munin-plugin.conf
+++ b/templates/munin-plugin.conf
@@ -1,6 +1,6 @@
 [jenkins_*]
-env.url {{ jenkins_url }}
-env.port 8080
+env.url {{ jenkins_url | urlsplit('hostname') }}
+env.port {{ jenkins_url | urlsplit('port') }}
 env.context /
-env.user {{ jenkins_munin_user }}
-env.apiToken {{ jenkins_munin_apitoken }}
+env.user {{ jenkins_admin_username }}
+env.apiToken {{ jenkins_admin_password }}
