--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -19,6 +19,23 @@
     state: latest
   become: yes
 
+- name: create /run/jenkins
+  file:
+    state: directory
+    path: /run/jenkins/
+    owner: jenkins
+    group: root
+    mode: 0755
+  become: yes
+
+- name: create tmpfiles.d
+  copy:
+    dest: /etc/tmpfiles.d/jenkins.conf
+    content: |
+      D /run/jenkins 0755 jenkins root
+    mode: 0644
+  become: yes
+
 - name: install required tools & libs
   apt:
     name: "{{ item }}"
