--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,14 @@
 
 - import_tasks: install.yml
 
+- name: check for systemd
+  command: dpkg -L systemd
+  register: jenkins_systemd_check
+  ignore_errors: yes
+
+- import_tasks: systemd.yml
+  when: jenkins_systemd_check | succeeded
+
 - name: check if admin user is created or if password changed
   command: jenkins-cli who-am-i
   register: jenkins_user_anonmyous
@@ -23,4 +31,4 @@
   ignore_errors: yes
 
 - import_tasks: munin-plugin.yml
-  when: jenkins_munin_node_check.rc == 0
+  when: jenkins_munin_node_check | succeeded
