--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -19,6 +19,14 @@
     state: latest
   become: yes
 
+# https://github.com/jenkinsci/packaging/pull/106
+- name: patch init.d
+  replace:
+    path: /etc/init.d/jenkins
+    regexp: killall -u $JENKINS_USER java daemon || return 3
+    replace: pkill -u "${$JENKINS_USER}" -f 'jenkins.war' || return 3
+  become: yes
+
 - name: create /run/jenkins
   file:
     state: directory
