--- a/tests/test.yml
+++ b/tests/test.yml
@@ -8,7 +8,7 @@
 
     jenkins_url: http://127.0.0.1:8080
 
-    jenkins_slave_agent_port: 5000
+    jenkins_agent_port: 5000
 
     jenkins_plugins:
       - git
