--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,3 +13,18 @@ jenkins_admin_password: admin
 jenkins_num_executors: 0
 
 jenkins_plugins: []
+
+jenkins_java_args:
+  - -server
+  - -Djava.awt.headless=true
+  - -Xms{{ jenkins_memory_max }}
+  - -Xmx{{ jenkins_memory_max }}
+  - -Djenkins.install.runSetupWizard=false
+  # https://www.cloudbees.com/blog/joining-big-leagues-tuning-jenkins-gc-responsiveness-and-stability
+  - -XX:+AlwaysPreTouch
+  - -XX:+UseG1GC
+  - -XX:+ExplicitGCInvokesConcurrent
+  - -XX:+ParallelRefProcEnabled
+  - -XX:+UseStringDeduplication
+  - -XX:+UnlockDiagnosticVMOptions
+  - -XX:G1SummarizeRSetStatsPeriod=1
