--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -84,7 +84,7 @@
   lineinfile:
     path: /etc/default/jenkins
     regexp: '^JAVA_ARGS='
-    line: 'JAVA_ARGS="-Djava.awt.headless=true -Xms{{ jenkins_memory_max }} -Xmx{{ jenkins_memory_max }} -Djenkins.install.runSetupWizard=false"'
+    line: 'JAVA_ARGS="{{ jenkins_java_args | join(' ') }}'
   become: yes
   notify: restart_jenkins
 
