--- a/tasks/admin.yml
+++ b/tasks/admin.yml
@@ -24,12 +24,15 @@
     state: restarted
   become: yes
 
-- name: wait_for jenkins
-  shell: "curl -D - --silent --max-time 5 {{ jenkins_url }}/cli/"
-  register: result
-  until: (result.stdout.find("403 Forbidden") != -1) or (result.stdout.find("200 OK") != -1) and (result.stdout.find("Please wait while") == -1)
-  retries: 60
-  delay: 5
+- name: waitfor jenkins 
+  uri:
+    url: "{{ jenkins_url }}"
+    status_code: "200,403"
+  register: waitfor_jenkins
+  until: waitfor_jenkins is success
+  retries: 300
+  delay: 1
+  changed_when: false
 
 - name: cleanup
   file:
