--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -10,9 +10,8 @@
   jenkins_plugin:
     name: "{{ item }}"
     # https://github.com/ansible/ansible/issues/24864
-    state: present
-    params:
-      url_username: "{{ jenkins_admin_username }}"
+    state: latest
+    url_username: "{{ jenkins_admin_username }}"
     url_password: "{{ jenkins_admin_password }}"
     url: "{{ jenkins_url }}"
     with_dependencies: yes
@@ -29,12 +28,15 @@
     name: jenkins
     state: restarted
   become: yes
-  when: jenkins_install_plugins | changed
+  when: jenkins_install_plugins is changed
 
-- name: wait_for jenkins
-  shell: "curl -D - --silent --max-time 5 {{ jenkins_url }}/cli/"
-  register: result
-  until: (result.stdout.find("403 Forbidden") != -1) or (result.stdout.find("200 OK") != -1) and (result.stdout.find("Please wait while") == -1)
-  retries: 60
-  delay: 5
-  when: jenkins_install_plugins | changed
+- name: waitfor jenkins 
+  uri:
+    url: "{{ jenkins_url }}"
+    status_code: "200,403"
+  register: waitfor_jenkins
+  until: waitfor_jenkins is success
+  retries: 300
+  delay: 1
+  changed_when: false
+  when: jenkins_install_plugins is changed
