--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,3 +32,5 @@ jenkins_java_args:
   - -Dhudson.model.LoadStatistics.decay=0.7
   - -Dhudson.slaves.NodeProvisioner.MARGIN=30
   - -Dhudson.slaves.NodeProvisioner.MARGIN0=0.6
+  # https://issues.jenkins-ci.org/browse/JENKINS-29490?focusedCommentId=232612&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-232612
+  - -Dhudson.DNSMultiCast.disabled=true
